# digits-classification

./: CMakeLists.txt  README.md
results/: eyeGlassClassifierModel.yml
source/: main.cpp
